--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -1,4 +1,5 @@
 repositories {
+    maven { url = 'https://maven.brott.dev/' }
     mavenCentral()
     google() // Needed for androidx
     flatDir {
@@ -18,5 +19,6 @@ dependencies {
     implementation 'org.tensorflow:tensorflow-lite-task-vision:0.2.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'org.firstinspires.ftc:gameAssets-PowerPlay:1.0.0'
+    implementation 'com.acmerobotics.dashboard:dashboard:0.4.6'
 }
 
