--- a/gradle.properties
+++ b/gradle.properties
@@ -5,3 +5,9 @@ android.useAndroidX=true
 
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+
+# Allows gradle to use more memory (6GB)
+org.gradle.jvmargs=-Xmx6G
+
+# Project Specifific Metadata
+version = "v0.1.0"
