--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,9 @@
 # Files for the ART/Dalvik VM
 *.dex
 
-# Java class files
+# Java/JDK files
 *.class
+*.hprof
 
 # Generated files
 bin/
@@ -40,7 +41,10 @@ captures/
 
 # IntelliJ
 *.iml
-.idea
+.idea/
+
+# For Mac users
+.DS_Store
 
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
@@ -74,7 +78,7 @@ lint/intermediates/
 lint/generated/
 lint/outputs/
 lint/tmp/
-lint/reports/
+# lint/reports/
 
-# Misc
-*.hprof
+# Visual Studio
+.vs
