--- a/gradle.properties
+++ b/gradle.properties
@@ -10,4 +10,4 @@ android.enableJetifier=true
 org.gradle.jvmargs=-Xmx6G
 
 # Project Specifific Metadata
-version = "v0.1.0"
+ftc_sdk_version = 9.0.0
