--- a/FtcRobotController/build.gradle
+++ b/FtcRobotController/build.gradle
@@ -24,3 +24,10 @@ android {
 }
 
 apply from: '../build.dependencies.gradle'
+
+dependencies {
+    implementation "org.firstinspires.ftc:RobotServer:${project.ftc_sdk_version}"
+    implementation "org.firstinspires.ftc:Inspection:${project.ftc_sdk_version}"
+    implementation "org.firstinspires.ftc:OnBotJava:${project.ftc_sdk_version}"
+    implementation "org.firstinspires.ftc:Blocks:${project.ftc_sdk_version}"
+}
